Delete frontend implement

--- a/frontend/src/app/pages/test/test.component.html
+++ b/frontend/src/app/pages/test/test.component.html
@@ -166,7 +166,7 @@
                     <button class="btn btn-outline-dark" (click)="openEdit(contentEdit , test.id)">Edit</button>
                 </td>
                 <td>
-                    <button class="btn btn-outline-dark">Delete</button>
+                    <button class="btn btn-outline-dark" (click)="handleDelete(test.id)">Delete</button>
                 </td>
             </tr>
         </tbody>
