Font awesome Added

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,6 @@
 <nav>
+    <fa-icon [icon]="faCoffee"></fa-icon>
+    <fa-icon [icon]="faPhone"></fa-icon>
     <ul>
         <li><a routerLink="/">Home</a></li>
         <li><a routerLink="/route">Route</a></li>
