--- a/frontend/src/styles/randula/dashboard.css
+++ b/frontend/src/styles/randula/dashboard.css
@@ -1,24 +1,60 @@
-.dashboardContainer {
-    width: 80%;
-    margin: 0 auto;
-    margin-top: 100px;
-    height: 600px;
+ .dashboardContainer {
+     width: 60%;
+     margin: 0 auto;
+     margin-top: 150px;
+     height: 500px;
+     background-color: aqua;
+ }
 
-}
+ img.dashimg {
+     max-width: 50%;
+     max-height: 50%;
+     margin: 0 auto;
+ }
+
+ .dashcol {
+     padding: 20px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     cursor: pointer;
+     transition: 0.5s;
+ }
+
+ .dashcol:hover {
+     transform: scale(1.05);
+     filter: grayscale(100%);
+ }
+
+ .odd {
+     background-color: rgb(139, 137, 137);
+ }
+
+ .even {
+     background-color: rgb(228, 228, 228);
+ }
+
+ h1.dashh1 {
+     font-size: 4vw;
+     text-align: center;
+     font-family: 'Nunito Sans', sans-serif;
+
+ }
+
+ /*
 
 .cluster {
     height: 40vh;
-    background-color: rgba(114, 121, 180, 0.419);
     padding: 10px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    transition: transform 0.3s, filter 0.3s;
+    transition: 0.3s;
     overflow: hidden;
 }
 
 .cluster:hover {
-    transform: scale(0.9);
+    transform: scale(0.95);
     filter: grayscale(100%);
     cursor: pointer;
     z-index: 1;
@@ -41,54 +77,13 @@
     background-image: url('../../assets/images/dashprof.jpg');
 }
 
-.overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(124, 124, 124, 0.50);
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: 0.5s ease;
-}
 
-
-.leftUp:hover .overlay {
-    height: 100%;
-}
-
-.rightUp:hover .overlay {
-    height: 100%;
-}
-
-.leftDown:hover .overlay {
-    height: 100%;
-}
-
-.rightDown:hover .overlay {
-    height: 100%;
-}
-
-
-
-h1.overlayHead {
-    width: 100%;
-    /* margin-top: 30%; */
-    color: white;
-    font-size: 4vw;
-    position: absolute;
-    text-align: center;
-    font-family: 'Nunito Sans', sans-serif;
-
-}
 
 h2.overlayHead {
     text-align: center;
-    color: white;
     font-size: 1.2vw;
     margin: 20% 0 0 18%;
     width: 70%;
     letter-spacing: 5px;
     line-height: 1.5rem;
-}
+} */
