--- a/frontend/src/styles/randula/review.css
+++ b/frontend/src/styles/randula/review.css
@@ -8,3 +8,18 @@
     border-radius: 20px;
     background-color: rgba(1, 14, 70, 0.223);
 }
+
+.centered-card {
+    width: 200px;
+    height: 200px;
+    background-color: aqua;
+    text-align: center;
+    border-radius: 10px;
+}
+
+img.reviewImg {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-top: 20px;
+}
