--- a/frontend/src/styles/chanudi/review.css
+++ b/frontend/src/styles/chanudi/review.css
@@ -12,7 +12,7 @@
 .centered-card {
     width: 200px;
     height: 200px;
-    background-color: aqua;
+    background-color: rgba(218, 219, 221, 0.945);
     text-align: center;
     border-radius: 10px;
 }
@@ -27,4 +27,16 @@ img.reviewImg {
 .reviewAll {
     display: grid;
     grid-template-columns: auto auto auto;
+}
+
+.heading1{
+    color: white;
+}
+
+img.bathali{
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+    margin-top: 47px;
+    margin-left: 150px;
 }
