--- a/frontend/src/styles/randula/dashboard.css
+++ b/frontend/src/styles/randula/dashboard.css
@@ -1,9 +1,18 @@
+body {
+    background-image: url('../../assets/images/cover.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgba(255, 255, 255, 0.2); /* Adjust the alpha value for transparency */
+    margin: 0; /* Remove default margin to avoid spacing */
+    padding: 0; /* Remove default padding to avoid spacing */
+}
  .dashboardContainer {
      width: 60%;
      margin: 0 auto;
      margin-top: 150px;
      height: 500px;
      background-color: aqua;
+     /* background-image: url('../../assets/images/cover.avif'); */
  }
 
  img.dashimg {
@@ -40,6 +49,11 @@
      font-family: 'Nunito Sans', sans-serif;
 
  }
+ .cardImage {
+    width: 100px; /* Adjust the width to your preference */
+    height: 100px; /* Adjust the height to maintain the aspect ratio */
+}
+
 
  /*
 
