--- a/frontend/src/styles/sudul/MSRPGenerator.css
+++ b/frontend/src/styles/sudul/MSRPGenerator.css
@@ -7,13 +7,15 @@
   margin: 0 auto;
   padding: 20px;
   margin-top: 100px;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .msrp-container {
   display: flex;
-  justify-content: space-between; /* Place the elements in a row with space between them */
-  max-width: 1400px; /* Adjust the maximum width as needed */
+  justify-content: space-between;
+  /* Place the elements in a row with space between them */
+  max-width: 1400px;
+  /* Adjust the maximum width as needed */
   margin: 0 auto;
   padding: 20px;
   min-width: 700px;
@@ -21,7 +23,7 @@
 
 /* MSRP generator container styles (left) */
 .msrp-gen-container {
-  background-color: #61db7757;
+  background-color: #d8afbdc5;
   flex: 1;
   padding: 20px;
   min-width: 400px;
@@ -63,7 +65,7 @@ button {
 /* Result container styles */
 .result-container {
   margin-top: 20px;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: x-large;
 }
 
@@ -71,12 +73,12 @@ button {
 .msrp-value {
   font-size: 18px;
   font-weight: bold;
-  color: #007bff;
+  color: #ffffff;
 }
 
 /* Graph container styles (right) */
 .graph-msrp {
-  background-color: #61dbd757;
+  background-color: #a4acaba4;
   flex: 1;
   padding: 20px;
   border: 1px solid #ccc;
@@ -98,22 +100,27 @@ button {
   /* Add additional styling as needed */
 }
 
-.heading-msrp{
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.heading-msrp {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: xx-large;
-  color: #007bff;
+  color: #514875;
+  background-color: #d4d4d46b;
   font-weight: 700;
+  border-radius: 5px;
 }
+
 .form-group-msrp {
-  display:inline-flex;
+  display: inline-flex;
   align-items: center;
-  margin-top: 10px; /* Adjust the margin as needed */
+  margin-top: 10px;
+  /* Adjust the margin as needed */
 }
 
 /* Label styles for the form group */
 .form-group-msrp label {
   flex: 1;
-  margin-right: 10px; /* Adjust the margin as needed for spacing */
+  margin-right: 10px;
+  /* Adjust the margin as needed for spacing */
   font-weight: bold;
   width: fit-content;
 }
@@ -125,65 +132,78 @@ button {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
-  width: 100%; /* Ensure the input takes up the available width */
-  -webkit-appearance: none; /* Remove default styling for WebKit browsers */
-  -moz-appearance: textfield; /* Display as a text field in Firefox */
+  width: 100%;
+  /* Ensure the input takes up the available width */
+  -webkit-appearance: none;
+  /* Remove default styling for WebKit browsers */
+  -moz-appearance: textfield;
+  /* Display as a text field in Firefox */
 }
 
 /* Apply styles to the number input for Firefox */
 .form-group-msrp input[type="float"]::-webkit-inner-spin-button,
 .form-group-msrp input[type="float"]::-webkit-outer-spin-button {
-  -webkit-appearance: none; /* Remove the spinners in WebKit browsers */
-  appearance: none; /* Remove the spinners in non-WebKit browsers */
+  -webkit-appearance: none;
+  /* Remove the spinners in WebKit browsers */
+  appearance: none;
+  /* Remove the spinners in non-WebKit browsers */
 }
 
 .button-container-msrp {
   text-align: center;
-  margin-top: 10px; /* Adjust the margin as needed */
+  margin-top: 10px;
+  /* Adjust the margin as needed */
 }
 
-.button-container-msrp input[type="submit"]{
+.button-container-msrp input[type="submit"] {
   font-family: 'Courier New', Courier, monospace;
   font-weight: 600;
-  background-color: #007bff;
+  background-color: #3590f1;
   color: #ffffff;
+  transition: all 0.3s ease-in-out;
 }
-.button-container-msrp input[type="submit"]:hover{
+
+.button-container-msrp input[type="submit"]:hover {
   font-family: 'Courier New', Courier, monospace;
   font-weight: 600;
-  background-color: #53e66c9a;
+  background-color: #1b1ff809;
   color: #000;
 }
 
-.red-msrp-desc{
+.red-msrp-desc {
   font-size: small;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 300;
   color: #ba0909;
 }
-.msrp-item-details-container{
+
+.msrp-item-details-container {
   margin-top: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 20px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
-.msrp-item-details{
+
+.msrp-item-details {
   display: flex;
-  justify-content: space-between; /* Place the elements in a row with space between them */
-  max-width: 1400px; /* Adjust the maximum width as needed */
+  justify-content: space-between;
+  /* Place the elements in a row with space between them */
+  max-width: 1400px;
+  /* Adjust the maximum width as needed */
   margin: 0 auto;
   min-width: 700px;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-.msrp-item-details-container h2{
+
+.msrp-item-details-container h2 {
   font-weight: 600;
   color: #000000;
   text-align: center;
 }
 
-.msrp-item-details-left{
-  background-color: #61db7757;
+.msrp-item-details-left {
+  background-color: #d6a7af57;
   flex: 1;
   padding: 20px;
   min-width: 400px;
@@ -192,16 +212,19 @@ button {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   font-size: medium;
 }
-.msrp-item-details-left h3{
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+.msrp-item-details-left h3 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: x-large;
   font-weight: 600;
 }
-.msrp-item-details-left img{
+
+.msrp-item-details-left img {
   max-width: 300px;
 }
-.msrp-item-details-right{
-  background-color: #61db7757;
+
+.msrp-item-details-right {
+  background-color: #d3d3d357;
   flex: 1;
   padding: 20px;
   min-width: 400px;
