--- a/frontend/src/styles/madusha/cashier-main.css
+++ b/frontend/src/styles/madusha/cashier-main.css
@@ -21,7 +21,7 @@
 
 .items-container-mad{
     float: left;
-    width: 300%;
+    width: 600px;
     box-sizing: border-box;
     padding-right: 20px;
     box-shadow: 10px;
@@ -34,7 +34,7 @@
 
 .selected-container{
     float: left;
-    width: 100%;
+    width: 300px;
     box-shadow: 10px;
     padding: 10px;
 }
@@ -63,7 +63,7 @@
     box-shadow: 3px 3px 20px 5px rgba(45, 45, 45, 0.3);
 }
 
-.table{
+.order-table{
     float: right;
     width: 50%;
     padding-right: 30px;
@@ -77,4 +77,27 @@
     margin: 10px;
 }
 
+.sales-summary-report-button-container{
+    float: right;
+}
+
+.sales-summary-report-button{
+    color: #ffffff;
+}
+
+button.sales-summary-report-button{
+    background-color: rgb(36, 36, 255);
+    color: #ffffff;
+    padding: 10px;
+    margin: 10px;
+    border: none;
+    font-size: 15px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+button.sales-summary-report-button:hover{
+    background-color: rgb(3, 3, 197);
+    color: white;
+}
 
